--- a/project/public/css/style.css
+++ b/project/public/css/style.css
@@ -110,23 +110,23 @@ body {
   line-height: 20px;
   border: 1px solid rgba(256, 256, 0, 0.5);
   -webkit-border-radius: 4px;
-     -moz-border-radius: 4px;
-          border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
-     -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
-          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
   -webkit-transition: all 0.2s ease-in-out;
-     -moz-transition: all 0.2s ease-in-out;
-       -o-transition: all 0.2s ease-in-out;
-          transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 a.thumbnail:hover,
 a.thumbnail:focus {
   border-color: #0088cc;
   -webkit-box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25);
-     -moz-box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25);
-          box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25);
+  -moz-box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25);
+  box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25);
 }
 
 .thumbnail > img {
@@ -139,4 +139,39 @@ a.thumbnail:focus {
 .thumbnail .caption {
   padding: 9px;
   color: #ffffff;
+}
+
+.name {
+  text-align: center;
+  color: #ffd700;
+  font-weight: bold;
+}
+
+#container {
+  padding-right: 25px;
+  padding-left: 25px;
+  padding-bottom: 25px;
+}
+.cols {
+  column-count: 3;
+  column-gap: 20px;
+}
+.box {
+  -webkit-column-break-inside: avoid;
+  page-break-inside: avoid;
+  break-inside: avoid;
+
+  margin-bottom: 20px;
+  height: 250px;
+  width: 400px;
+  max-height: 100%;
+  max-width: 100%;
+
+  background: red;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border: 4px solid black;
+}
+.image {
+  width: 100%;
+  height: 90%;
 }
