--- a/project/views/signup.ejs
+++ b/project/views/signup.ejs
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!-- Fancy Fonts, Icons, and Logos -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
-        integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
+      integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
+      crossorigin="anonymous"
+    />
     <!-- Bootstrap Link -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
-        integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+      integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+      crossorigin="anonymous"
+    />
     <!-- CSS StyleSheet -->
     <link rel="stylesheet" href="public/css/style.css" />
 
@@ -19,61 +26,104 @@
 
     <!-- rSed Title Icon -->
     <link rel="icon" href="public\img\rSedLogo.png" type="image/icon type" />
-</head>
+  </head>
 
-<!-- Body -->
+  <!-- Body -->
 
-<body>
+  <body>
     <!-- HEADER -->
-     <%- include("./partials/header.ejs") %>
+    <%- include("./partials/header.ejs") %>
 
     <header id="sign-up">
-        <div class="d-flex justify-content-center">
-            <div class="card bg-danger text-center card-form" style="margin-top: 100px; margin-bottom: 100px">
-                <div class="card-body">
-                    <h3 style="color: #ffd700">Sign Up</h3>
-                    <h4 style="color: #ffd700">
-                        Already Have an Account?
-                        <a href="/signin" class="text-white"><u>Sign In</u></a>
-                    </h4>
-                    <form method="POST" action="/signup"
-                        oninput='password2.setCustomValidity(password2.value != password.value ? "Passwords do not match." : "")'>
-                        <div class="form-group">
-                            <input type="text" name="firstName" class="form-control form-control-lg"
-                                placeholder="First Name" required/>
-                        </div>
-                        <div class="form-group">
-                            <input type="text" name="lastName" class="form-control form-control-lg"
-                                placeholder="Last Name" required/>
-                        </div>
-                        <div class="form-group">
-                            <input type="text" name="username" class="form-control form-control-lg"
-                                placeholder="Username" required/>
-                        </div>
-                        <div class="form-group">
-                            <input type="email" name="email" class="form-control form-control-lg" placeholder="Email" required/>
-                        </div>
-                        <div class="form-group">
-                            <input type="text" name="phone" class="form-control form-control-lg"
-                                placeholder="Phone Number" />
-                        </div>
-                        <div class="form-group">
-                            <input type="password" name="password" class="form-control form-control-lg"
-                                placeholder="Password" required/>
-                        </div>
-                        <div class="form-group">
-                            <input type="password" name="password2" class="form-control form-control-lg"
-                                placeholder="Confirm Password"/>
-                        </div>
-                        <input type="submit" value="Submit" class="btn btn-outline-light btn-block bg-dark" />
-                    </form>
-                </div>
-            </div>
+      <div class="d-flex justify-content-center">
+        <div
+          class="card text-center card-form"
+          style="margin-top: 100px; margin-bottom: 100px; background-color: red"
+        >
+          <div class="card-body">
+            <h3 style="color: #ffd700">Sign Up</h3>
+            <h4 style="color: #ffd700">
+              Already Have an Account?
+              <a href="/signin" class="text-white"><u>Sign In</u></a>
+            </h4>
+            <form
+              method="POST"
+              action="/signup"
+              oninput='password2.setCustomValidity(password2.value != password.value ? "Passwords do not match." : "")'
+            >
+              <div class="form-group">
+                <input
+                  type="text"
+                  name="firstName"
+                  class="form-control form-control-lg"
+                  placeholder="First Name"
+                  required
+                />
+              </div>
+              <div class="form-group">
+                <input
+                  type="text"
+                  name="lastName"
+                  class="form-control form-control-lg"
+                  placeholder="Last Name"
+                  required
+                />
+              </div>
+              <div class="form-group">
+                <input
+                  type="text"
+                  name="username"
+                  class="form-control form-control-lg"
+                  placeholder="Username"
+                  required
+                />
+              </div>
+              <div class="form-group">
+                <input
+                  type="email"
+                  name="email"
+                  class="form-control form-control-lg"
+                  placeholder="Email"
+                  required
+                />
+              </div>
+              <div class="form-group">
+                <input
+                  type="text"
+                  name="phone"
+                  class="form-control form-control-lg"
+                  placeholder="Phone Number"
+                />
+              </div>
+              <div class="form-group">
+                <input
+                  type="password"
+                  name="password"
+                  class="form-control form-control-lg"
+                  placeholder="Password"
+                  required
+                />
+              </div>
+              <div class="form-group">
+                <input
+                  type="password"
+                  name="password2"
+                  class="form-control form-control-lg"
+                  placeholder="Confirm Password"
+                />
+              </div>
+              <input
+                type="submit"
+                value="Submit"
+                class="btn btn-outline-light btn-block bg-dark"
+              />
+            </form>
+          </div>
         </div>
+      </div>
     </header>
 
     <!-- FOOTER -->
     <%- include("./partials/footer.ejs") %>
-</body>
-
+  </body>
 </html>
