--- a/project/views/restauranttypes/indian.ejs
+++ b/project/views/restauranttypes/indian.ejs
@@ -31,7 +31,7 @@
 
   <body>
     <%- include("../partials/header.ejs") %>
-    <p>Indian</p>
+    <p style="padding-top: 75px;">Indian</p>
     <%- include("../partials/footer.ejs") %>
   </body>
 </html>
