--- a/project/views/restauranttypes/italian.ejs
+++ b/project/views/restauranttypes/italian.ejs
@@ -30,7 +30,7 @@
   </head>
   <body>
     <%- include("../partials/header.ejs") %>
-    <p>Italian</p>
+    <p style="padding-top: 75px;">Italian</p>
     <%- include("../partials/footer.ejs") %>
   </body>
 </html>
