--- a/project/views/restauranttypes/mediterranean.ejs
+++ b/project/views/restauranttypes/mediterranean.ejs
@@ -32,7 +32,7 @@
   <body>
     <%- include("../partials/header.ejs") %>
 
-    <p>Mediterranean</p>
+    <p style="padding-top: 75px;">Mediterranean</p>
 
     <%- include("../partials/footer.ejs") %>
   </body>
