--- a/project/views/restaurantcategory.ejs
+++ b/project/views/restaurantcategory.ejs
@@ -33,7 +33,7 @@
     <h1 align="center" style="padding-top:75px; padding-bottom: 15px;">
       Pick a Restaurant Category
     </h1>
-    <div id="container" class="cols">
+    <div id="container" class="cols" align="center">
       <div class="box">
         <a href="/italian" style="text-decoration: none;">
           <img
