--- a/project/views/restauranttypes/mediterranean.ejs
+++ b/project/views/restauranttypes/mediterranean.ejs
@@ -32,7 +32,48 @@
   <body>
     <%- include("../partials/header.ejs") %>
 
-    <p style="padding-top: 75px;">Mediterranean</p>
+    <h1 align="center" style="padding-top: 75px; ">Mediterranean</h1>
+
+    <div id="container" class="cols" align="center">
+      <div class="box">
+        <a href="#" style="text-decoration: none;">
+          <img
+            src="https://kazamazagrill.com/wp-content/uploads/2018/06/Gallery1.png"
+            alt="Kaza Maza"
+            class="image"
+          />
+          <div class="name">
+            <p>Kaza Maza</p>
+          </div>
+        </a>
+      </div>
+
+      <div class="box">
+        <a href="#" style="text-decoration: none;">
+          <img
+            src="https://assets.simpleviewinc.com/simpleview/image/fetch/c_fill,h_600,q_75,w_900/https://assets.simpleviewinc.com/simpleview/image/upload/crm/surfcityusa/Luna-Grill-337806f65056a36_33786fd1-5056-a36a-08dd28acb3746893.jpg"
+            alt="Luna Grill"
+            class="image"
+          />
+          <div class="name">
+            <p>Luna Grill</p>
+          </div>
+        </a>
+      </div>
+
+      <div class="box">
+        <a href="#" style="text-decoration: none;">
+          <img
+            src="https://raster-static.postmates.com/?url=com.postmates.img.prod.s3.amazonaws.com/3d1ff7bc-6784-46be-8588-b409179b323e/orig.jpg&quality=90&w=1500&h=900&mode=crop&format=jpg&v=4"
+            alt="Kabab Crush"
+            class="image"
+          />
+          <div class="name">
+            <p>Kabab Crush</p>
+          </div>
+        </a>
+      </div>
+    </div>
 
     <%- include("../partials/footer.ejs") %>
   </body>
