--- a/project/views/restauranttypes/mexican.ejs
+++ b/project/views/restauranttypes/mexican.ejs
@@ -32,7 +32,48 @@
   <body>
     <%- include("../partials/header.ejs") %>
 
-    <p style="padding-top: 75px;">Mexican</p>
+    <h1 align="center" style="padding-top: 75px; ">Mexican</h1>
+
+    <div id="container" class="cols" align="center">
+      <div class="box">
+        <a href="#" style="text-decoration: none;">
+          <img
+            src="https://photos.bringfido.com/restaurants/temp/131e.jpg?size=stack&density=2x"
+            alt="Miguel’s Jr"
+            class="image"
+          />
+          <div class="name">
+            <p>Miguel’s Jr</p>
+          </div>
+        </a>
+      </div>
+
+      <div class="box">
+        <a href="#" style="text-decoration: none;">
+          <img
+            src="https://www.qsrmagazine.com/sites/default/files/styles/story_page/public/story/el-pollo-loco-reduces-menu-20-percent-1557163330.jpg?itok=jJS74Dt9"
+            alt="El Pollo Loco"
+            class="image"
+          />
+          <div class="name">
+            <p>El Pollo Loco</p>
+          </div>
+        </a>
+      </div>
+
+      <div class="box">
+        <a href="#" style="text-decoration: none;">
+          <img
+            src="https://raster-static.postmates.com/?url=com.postmates.img.prod.s3.amazonaws.com/c0b2bbf2-6d97-4a2f-9430-577dfe4af84e/orig.png&quality=90&w=1500&h=900&mode=crop&format=png&v=4"
+            alt="Alberto's"
+            class="image"
+          />
+          <div class="name">
+            <p>Alberto's Mexican Food</p>
+          </div>
+        </a>
+      </div>
+    </div>
 
     <%- include("../partials/footer.ejs") %>
   </body>
