--- a/project/views/restauranttypes/american.ejs
+++ b/project/views/restauranttypes/american.ejs
@@ -32,8 +32,47 @@
   <body>
     <%- include("../partials/header.ejs") %>
 
-    <p style="padding-top: 75px;">American</p>
+    <h1 align="center" style="padding-top: 75px; ">American</h1>
+    <div id="container" class="cols" align="center">
+      <div class="box">
+        <a href="#" style="text-decoration: none;">
+          <img
+            src="https://marketrealist.imgix.net/uploads/2019/11/McDonalds-menu.jpg?auto=compress%2Cformat&ixlib=php-1.2.1"
+            alt="McDonalds"
+            class="image"
+          />
+          <div class="name">
+            <p>McDonalds</p>
+          </div>
+        </a>
+      </div>
 
+      <div class="box">
+        <a href="#" style="text-decoration: none;">
+          <img
+            src="https://www.ocregister.com/wp-content/uploads/2019/02/0224-OPENSHUT-RAISINGCANES-1-1.jpg"
+            alt="Raising Kanes"
+            class="image"
+          />
+          <div class="name">
+            <p>Raising Kanes</p>
+          </div>
+        </a>
+      </div>
+
+      <div class="box">
+        <a href="#" style="text-decoration: none;">
+          <img
+            src="https://i.insider.com/5bbd187101145529745a9895?width=1100&format=jpeg&auto=webp"
+            alt="Burger King"
+            class="image"
+          />
+          <div class="name">
+            <p>Burger King</p>
+          </div>
+        </a>
+      </div>
+    </div>
     <%- include("../partials/footer.ejs") %>
   </body>
 </html>
