--- a/project/views/restauranttypes/asian.ejs
+++ b/project/views/restauranttypes/asian.ejs
@@ -31,7 +31,49 @@
 
   <body>
     <%- include("../partials/header.ejs") %>
-    <p style="padding-top: 75px;">Asian</p>
+
+    <h1 align="center" style="padding-top: 75px; ">Asian</h1>
+
+    <div id="container" class="cols" align="center">
+      <div class="box">
+        <a href="#" style="text-decoration: none;">
+          <img
+            src="https://s.yimg.com/ny/api/res/1.2/J1RhI2UnzNNQ2qcWVYlvDA--~A/YXBwaWQ9aGlnaGxhbmRlcjtzbT0xO3c9ODAw/https://media.zenfs.com/en/delish_597/46c193e9225136f409bfbae3f58aa4ef"
+            alt="Panda Express"
+            class="image"
+          />
+          <div class="name">
+            <p>Panda Express</p>
+          </div>
+        </a>
+      </div>
+
+      <div class="box">
+        <a href="#" style="text-decoration: none;">
+          <img
+            src="https://media-exp1.licdn.com/dms/image/C4E1BAQFRDmM0nIbRmQ/company-background_10000/0?e=2159024400&v=beta&t=7AePiqXhIb28oZd2rEm-XlYNQjz_8bdX4W60St2lsrw"
+            alt="Pick Up Stix"
+            class="image"
+          />
+          <div class="name">
+            <p>Pick Up Stix</p>
+          </div>
+        </a>
+      </div>
+
+      <div class="box">
+        <a href="#" style="text-decoration: none;">
+          <img
+            src="https://cdn.vox-cdn.com/thumbor/3bWGDCuM7Hgf1SnWkJN7jQvahcU=/1400x1050/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/13374719/PF_Chang_s_Dishes_2.jpg"
+            alt="PF Chang's"
+            class="image"
+          />
+          <div class="name">
+            <p>PF Chang's</p>
+          </div>
+        </a>
+      </div>
+    </div>
     <%- include("../partials/footer.ejs") %>
   </body>
 </html>
