--- a/project/views/restauranttypes/indian.ejs
+++ b/project/views/restauranttypes/indian.ejs
@@ -31,7 +31,49 @@
 
   <body>
     <%- include("../partials/header.ejs") %>
-    <p style="padding-top: 75px;">Indian</p>
+
+    <h1 align="center" style="padding-top: 75px; ">Indian</h1>
+
+    <div id="container" class="cols" align="center">
+      <div class="box">
+        <a href="#" style="text-decoration: none;">
+          <img
+            src="https://www.punjabitandoor.com/images/food.jpg"
+            alt="Punjabi Tandoor"
+            class="image"
+          />
+          <div class="name">
+            <p>Punjabi Tandoor</p>
+          </div>
+        </a>
+      </div>
+
+      <div class="box">
+        <a href="#" style="text-decoration: none;">
+          <img
+            src="https://www.gannett-cdn.com/presto/2019/10/28/PFTM/15a2507d-4ec0-4abc-abdd-fe0d223ee070-MasalaMantra.jpg?crop=2047,1152,x0,y0&width=1600&height=800&fit=bounds"
+            alt="Mantra"
+            class="image"
+          />
+          <div class="name">
+            <p>Mantra Indian Cuisine</p>
+          </div>
+        </a>
+      </div>
+
+      <div class="box">
+        <a href="#" style="text-decoration: none;">
+          <img
+            src="https://curryhutla.com/images/portfolio-3.jpg"
+            alt="Curry Hut"
+            class="image"
+          />
+          <div class="name">
+            <p>Curry Hut</p>
+          </div>
+        </a>
+      </div>
+    </div>
     <%- include("../partials/footer.ejs") %>
   </body>
 </html>
