--- a/project/views/restauranttypes/italian.ejs
+++ b/project/views/restauranttypes/italian.ejs
@@ -30,7 +30,49 @@
   </head>
   <body>
     <%- include("../partials/header.ejs") %>
-    <p style="padding-top: 75px;">Italian</p>
+
+    <h1 align="center" style="padding-top: 75px; ">Italian</h1>
+
+    <div id="container" class="cols" align="center">
+      <div class="box">
+        <a href="#" style="text-decoration: none;">
+          <img
+            src="https://www.qsrmagazine.com/sites/default/files/styles/story_page/public/Fazoli.jpg?itok=eyyuxHBy"
+            alt="Fazoli's"
+            class="image"
+          />
+          <div class="name">
+            <p>Fazoli's</p>
+          </div>
+        </a>
+      </div>
+
+      <div class="box">
+        <a href="#" style="text-decoration: none;">
+          <img
+            src="https://media.olivegarden.com/images/site/ext/pages/_promotions/specials/lunch-duos-combos/lunch-duos-combos-012720-sdd-00.jpg"
+            alt="Olive Garden"
+            class="image"
+          />
+          <div class="name">
+            <p>Olive Garden</p>
+          </div>
+        </a>
+      </div>
+
+      <div class="box">
+        <a href="#" style="text-decoration: none;">
+          <img
+            src="https://u.tfstatic.com/restaurant_photos/837/451837/169/612/pizzaioli-veraci-fuorigrotta-proposta-di-pizze-51275.jpg"
+            alt="Pizzaioli"
+            class="image"
+          />
+          <div class="name">
+            <p>Pizzaioli</p>
+          </div>
+        </a>
+      </div>
+    </div>
     <%- include("../partials/footer.ejs") %>
   </body>
 </html>
