--- a/project/public/css/style.css
+++ b/project/public/css/style.css
@@ -58,7 +58,7 @@ body {
   padding: 50px;
   padding-top: 80px;
   width: 80%;
-  background: rgba(256, 256, 0, 0.5);
+  /*background: rgba(256, 256, 0, 0.5);*/
   min-height: 2000px;
 }
 
