--- a/project/views/profile.ejs
+++ b/project/views/profile.ejs
@@ -1,86 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- Fancy Fonts, Icons, and Logos -->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
+      integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
+      crossorigin="anonymous"
+    />
+    <!-- Bootstrap Link -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+      integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+      crossorigin="anonymous"
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <!-- Fancy Fonts, Icons, and Logos -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
-    integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous" />
-  <!-- Bootstrap Link -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
-    integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous" />
+    <!-- CSS StyleSheet -->
+    <link rel="stylesheet" href="../public/css/style.css" />
 
-  <!-- CSS StyleSheet -->
-  <link rel="stylesheet" href="../public/css/style.css" />
+    <!-- Icon Title -->
+    <title>OmNom Food Delivery</title>
 
-  <!-- Icon Title -->
-  <title>OmNom Food Delivery</title>
+    <!-- rSed Title Icon -->
+    <link rel="icon" href="../public/img/rSedLogo.png" type="" />
+  </head>
 
-  <!-- rSed Title Icon -->
-  <link rel="icon" href="../public/img/rSedLogo.png" type="" />
-</head>
+  <!-- Body -->
 
-<!-- Body -->
+  <body>
+    <%- include("./partials/header.ejs") %>
+    <header id="profile-section">
+      <div class="shamelessly-copied-dark-overlay">
+        <div class="profile-inner-thing container" style="padding-top: 100px">
+          <div class="row">
+            <div class="d-lg-block">
+              <div class="container">
+                <a
+                  class="btn btn-outline-light mx-2"
+                  href="/editprofile/<%=currentUser._id%> "
+                  role="button"
+                  sty
+                  style="position: absolute; right: 15%;height: 40px;width: 100px;text-align:center;"
+                >
+                  Edit Profile </a
+                ><br />
+                <img
+                  class="user"
+                  src="<%= user.image %>"
+                  height="150"
+                  width="200"
+                />
+                <h1>
+                  <%=user.firstName%> <%=user.lastName%>
+                </h1>
+                <h3 class="font-weight-italics" style="color: black">
+                  Email: <%= user.email %>
+                </h3>
+                <br /><br />
+                <h2 class="font-weight-bold" style="color: black">
+                  About
+                </h2>
+                <h2>
+                  <%=user.description%>
+                </h2>
+                <br /><br />
+                <h2 class="font-weight-bold" style="color: black">
+                  Preferences
+                </h2>
 
-<body>
-  <%- include("./partials/header.ejs") %>
-  <header id="profile-section">
-    <div class="shamelessly-copied-dark-overlay">
-      <div class="profile-inner-thing container" style="padding-top: 100px">
-        <div class="row">
-          <div class="d-lg-block">
-            <div class="container">
-              <a class="btn btn-outline-light mx-2" href="/editprofile/<%=currentUser._id%> " role="button" sty
-                style="position: absolute; right: 15%;height: 40px;width: 100px;text-align:center;">
-                Edit Profile
-              </a><br>
-              <img class="user" src="<%= user.image %>" height="150" width="200">
-              <h1>
-                <%=user.firstName%> <%=user.lastName%>
-              </h1>
-              <h3 class="font-weight-italics" style="color: black">
-                Email: <%= user.email %>
-              </h3>
-              <br><br>
-              <h2 class="font-weight-bold" style="color: black">
-                About
-              </h2>
-              <h2>
-                <%=user.description%>
-              </h2>
-              <br><br>
-              <h2 class="font-weight-bold" style="color: black">
-                Preferences
-              </h2>
-              <h3 style="color: black">
-                <ul>
-                  <div class="container">
-                    <div class="row text-center" style='display: flex; flex-wrap: wrap;'>
-                      <% preferences.forEach(function(restaurant){ %>
-                      <div class='col-md-3 col-sm-6'>
-                        <div class='thumbnail'>
-                          <img src="<%= restaurant.image %>">
-                          <div class="caption">
-                            <h4><%= restaurant.name %></h4>
-                          </div>
-                        </div>
-                      </div>
-                      <% }); %>
+                <div
+                  id="container"
+                  class="cols"
+                  align="center"
+                  style="padding-right: 100px; margin-left: -25px"
+                >
+                  <% preferences.forEach(function(restaurant){ %>
+                  <div class="box">
+                    <img src="<%= restaurant.image %>" class="image" />
+                    <div class="name">
+                      <%= restaurant.name %>
                     </div>
                   </div>
-                </ul>
-              </h3>
+                  <% }); %>
+                </div>
+
+                <!--  <h3 style="color: black">
+                  <ul>
+                    <div class="container">
+                      <div
+                        class="row text-center"
+                        style="display: flex; flex-wrap: wrap;"
+                      >
+                        <% preferences.forEach(function(restaurant){ %>
+                        <div class="col-md-3 col-sm-6">
+                          <div class="thumbnail">
+                            <img src="<%= restaurant.image %>" />
+                            <div class="caption">
+                              <h4><%= restaurant.name %></h4>
+                            </div>
+                          </div>
+                        </div>
+                        <% }); %>
+                      </div>
+                    </div>
+                  </ul>
+                </h3>-->
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </header>
+    </header>
 
-  <!-- FOOTER -->
-  <%- include("./partials/footer.ejs") %>
-</body>
-
+    <!-- FOOTER -->
+    <%- include("./partials/footer.ejs") %>
+  </body>
 </html>
