--- a/project/views/profile.ejs
+++ b/project/views/profile.ejs
@@ -76,7 +76,7 @@
                   id="container"
                   class="cols"
                   align="center"
-                  style="padding-right: 100px; margin-left: -25px"
+                  style="margin-left: -25px"
                 >
                   <% preferences.forEach(function(restaurant){ %>
                   <div class="box">
