--- a/project/views/profile.ejs
+++ b/project/views/profile.ejs
@@ -54,21 +54,21 @@
                   height="150"
                   width="200"
                 />
-                <h1>
+                <h1 style="color:#ffd700">
                   <%=user.firstName%> <%=user.lastName%>
                 </h1>
-                <h3 class="font-weight-italics" style="color: black">
+                <h3 class="font-weight-italics" style="color: white">
                   Email: <%= user.email %>
                 </h3>
                 <br /><br />
-                <h2 class="font-weight-bold" style="color: black">
+                <h2 class="font-weight-bold" style="color: #ffd700">
                   About
                 </h2>
                 <h2>
                   <%=user.description%>
                 </h2>
                 <br /><br />
-                <h2 class="font-weight-bold" style="color: black">
+                <h2 class="font-weight-bold" style="color: #ffd700">
                   Preferences
                 </h2>
 
