--- a/project/views/profile.ejs
+++ b/project/views/profile.ejs
@@ -44,7 +44,7 @@
                   href="/editprofile/<%=currentUser._id%> "
                   role="button"
                   sty
-                  style="position: absolute; right: 15%;height: 40px;width: 100px;text-align:center;"
+                  style="position: absolute; top: 7%; right: 28%;height: 40px;width: 100px;text-align:center;"
                 >
                   Edit Profile </a
                 ><br />
