Added links to restaurant profiles in ejs files.

--- a/project/views/restauranttypes/asian.ejs
+++ b/project/views/restauranttypes/asian.ejs
@@ -36,7 +36,7 @@
 
     <div id="container" class="cols" align="center">
       <div class="box">
-        <a href="#" style="text-decoration: none;">
+        <a href="restaurantprofile/5e7da0e41a8f621d34aa277d" style="text-decoration: none;">
           <img
             src="https://s.yimg.com/ny/api/res/1.2/J1RhI2UnzNNQ2qcWVYlvDA--~A/YXBwaWQ9aGlnaGxhbmRlcjtzbT0xO3c9ODAw/https://media.zenfs.com/en/delish_597/46c193e9225136f409bfbae3f58aa4ef"
             alt="Panda Express"
@@ -49,7 +49,7 @@
       </div>
 
       <div class="box">
-        <a href="#" style="text-decoration: none;">
+        <a href="restaurantprofile/5e7da7f10c1894203ca8f79f" style="text-decoration: none;">
           <img
             src="https://media-exp1.licdn.com/dms/image/C4E1BAQFRDmM0nIbRmQ/company-background_10000/0?e=2159024400&v=beta&t=7AePiqXhIb28oZd2rEm-XlYNQjz_8bdX4W60St2lsrw"
             alt="Pick Up Stix"
@@ -62,7 +62,7 @@
       </div>
 
       <div class="box">
-        <a href="#" style="text-decoration: none;">
+        <a href="restaurantprofile/5e7db776457ce945e8f28f68" style="text-decoration: none;">
           <img
             src="https://cdn.vox-cdn.com/thumbor/3bWGDCuM7Hgf1SnWkJN7jQvahcU=/1400x1050/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/13374719/PF_Chang_s_Dishes_2.jpg"
             alt="PF Chang's"
