--- a/project/views/restauranttypes/indian.ejs
+++ b/project/views/restauranttypes/indian.ejs
@@ -36,7 +36,7 @@
 
     <div id="container" class="cols" align="center">
       <div class="box">
-        <a href="#" style="text-decoration: none;">
+        <a href="restaurantprofile/5e7d8a9290a2fc3078e0b96c" style="text-decoration: none;">
           <img
             src="https://www.punjabitandoor.com/images/food.jpg"
             alt="Punjabi Tandoor"
@@ -49,7 +49,7 @@
       </div>
 
       <div class="box">
-        <a href="#" style="text-decoration: none;">
+        <a href="restaurantprofile/5e7d8b28a95fbe253cd7fff4" style="text-decoration: none;">
           <img
             src="https://www.gannett-cdn.com/presto/2019/10/28/PFTM/15a2507d-4ec0-4abc-abdd-fe0d223ee070-MasalaMantra.jpg?crop=2047,1152,x0,y0&width=1600&height=800&fit=bounds"
             alt="Mantra"
@@ -62,7 +62,7 @@
       </div>
 
       <div class="box">
-        <a href="#" style="text-decoration: none;">
+        <a href="restaurantprofile/5e7d8bb94d7e8c4564c559fe" style="text-decoration: none;">
           <img
             src="https://curryhutla.com/images/portfolio-3.jpg"
             alt="Curry Hut"
