--- a/project/views/restauranttypes/italian.ejs
+++ b/project/views/restauranttypes/italian.ejs
@@ -35,7 +35,7 @@
 
     <div id="container" class="cols" align="center">
       <div class="box">
-        <a href="#" style="text-decoration: none;">
+        <a href="restaurantprofile/5e7d93619e52b628c8a42522" style="text-decoration: none;">
           <img
             src="https://www.qsrmagazine.com/sites/default/files/styles/story_page/public/Fazoli.jpg?itok=eyyuxHBy"
             alt="Fazoli's"
@@ -48,7 +48,7 @@
       </div>
 
       <div class="box">
-        <a href="#" style="text-decoration: none;">
+        <a href="restaurantprofile/5e7d94c07dbd613030b5e8fa" style="text-decoration: none;">
           <img
             src="https://media.olivegarden.com/images/site/ext/pages/_promotions/specials/lunch-duos-combos/lunch-duos-combos-012720-sdd-00.jpg"
             alt="Olive Garden"
@@ -61,7 +61,7 @@
       </div>
 
       <div class="box">
-        <a href="#" style="text-decoration: none;">
+        <a href="restaurantprofile/5e7d95f12d4c150d24019c67" style="text-decoration: none;">
           <img
             src="https://u.tfstatic.com/restaurant_photos/837/451837/169/612/pizzaioli-veraci-fuorigrotta-proposta-di-pizze-51275.jpg"
             alt="Pizzaioli"
