--- a/project/views/restauranttypes/mediterranean.ejs
+++ b/project/views/restauranttypes/mediterranean.ejs
@@ -36,7 +36,7 @@
 
     <div id="container" class="cols" align="center">
       <div class="box">
-        <a href="#" style="text-decoration: none;">
+        <a href="restaurantprofile/5e7dc45be5d125204c84e586" style="text-decoration: none;">
           <img
             src="https://kazamazagrill.com/wp-content/uploads/2018/06/Gallery1.png"
             alt="Kaza Maza"
@@ -49,7 +49,7 @@
       </div>
 
       <div class="box">
-        <a href="#" style="text-decoration: none;">
+        <a href="restaurantprofile/5e7dc6d6fc503e279c35fa22" style="text-decoration: none;">
           <img
             src="https://assets.simpleviewinc.com/simpleview/image/fetch/c_fill,h_600,q_75,w_900/https://assets.simpleviewinc.com/simpleview/image/upload/crm/surfcityusa/Luna-Grill-337806f65056a36_33786fd1-5056-a36a-08dd28acb3746893.jpg"
             alt="Luna Grill"
