--- a/project/views/restauranttypes/mexican.ejs
+++ b/project/views/restauranttypes/mexican.ejs
@@ -36,7 +36,7 @@
 
     <div id="container" class="cols" align="center">
       <div class="box">
-        <a href="#" style="text-decoration: none;">
+        <a href="restaurantprofile/5e7d983279fdd01d28baeaf6" style="text-decoration: none;">
           <img
             src="https://photos.bringfido.com/restaurants/temp/131e.jpg?size=stack&density=2x"
             alt="Miguel’s Jr"
@@ -49,7 +49,7 @@
       </div>
 
       <div class="box">
-        <a href="#" style="text-decoration: none;">
+        <a href="restaurantprofile/5e7d995370ccb23eccad3536" style="text-decoration: none;">
           <img
             src="https://www.qsrmagazine.com/sites/default/files/styles/story_page/public/story/el-pollo-loco-reduces-menu-20-percent-1557163330.jpg?itok=jJS74Dt9"
             alt="El Pollo Loco"
@@ -62,7 +62,7 @@
       </div>
 
       <div class="box">
-        <a href="#" style="text-decoration: none;">
+        <a href="restaurantprofile/5e7d9cd1a6b3261da8a57a3b" style="text-decoration: none;">
           <img
             src="https://raster-static.postmates.com/?url=com.postmates.img.prod.s3.amazonaws.com/c0b2bbf2-6d97-4a2f-9430-577dfe4af84e/orig.png&quality=90&w=1500&h=900&mode=crop&format=png&v=4"
             alt="Alberto's"
