--- a/project/views/restauranttypes/american.ejs
+++ b/project/views/restauranttypes/american.ejs
@@ -35,7 +35,7 @@
     <h1 align="center" style="padding-top: 75px; ">American</h1>
     <div id="container" class="cols" align="center">
       <div class="box">
-        <a href="#" style="text-decoration: none;">
+        <a href="restaurantprofile/5e79b7d36108123d6832b12c" style="text-decoration: none;">
           <img
             src="https://marketrealist.imgix.net/uploads/2019/11/McDonalds-menu.jpg?auto=compress%2Cformat&ixlib=php-1.2.1"
             alt="McDonalds"
@@ -48,7 +48,7 @@
       </div>
 
       <div class="box">
-        <a href="#" style="text-decoration: none;">
+        <a href="restaurantprofile/5e7d8fc3eb83b33354c9fca2" style="text-decoration: none;">
           <img
             src="https://www.ocregister.com/wp-content/uploads/2019/02/0224-OPENSHUT-RAISINGCANES-1-1.jpg"
             alt="Raising Kanes"
@@ -61,7 +61,7 @@
       </div>
 
       <div class="box">
-        <a href="#" style="text-decoration: none;">
+        <a href="restaurantprofile/5e7d90884f65124a48042217" style="text-decoration: none;">
           <img
             src="https://i.insider.com/5bbd187101145529745a9895?width=1100&format=jpeg&auto=webp"
             alt="Burger King"
