--- a/project/views/partials/header.ejs
+++ b/project/views/partials/header.ejs
@@ -80,7 +80,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="btn btn-outline-light mx-2" href="#">
+          <a class="btn btn-outline-light mx-2" href="#" role="button">
             <span class="fa">&#xf07a;</span></a
           >
         </li>
