--- a/project/views/restaurantcategory.ejs
+++ b/project/views/restaurantcategory.ejs
@@ -37,7 +37,7 @@
       <div class="box">
         <a href="/italian" style="text-decoration: none;">
           <img
-            src="https://serafinamia.com/wp-content/uploads/2018/09/10-Italian-Fun-Facts-The-Food-Fashion-and-Culture-of-Italy.jpg"
+            src="https://bstatic.com/xdata/images/xphoto/1182x887/68794608.jpg?k=155689446d1aa48adbda2d0977fcd6d7608a9f9151562b5055f4baa366583eed&o=?size=S"
             alt="Italian"
             class="image"
           />
