--- a/project/views/restaurantprofile.ejs
+++ b/project/views/restaurantprofile.ejs
@@ -27,57 +27,44 @@
   <%- include("./partials/header.ejs") %>
   <header id="profile-section">
     <div class="shamelessly-copied-dark-overlay">
-      <div class="profile-inner-thing container" style="padding-top: 100px">
-        <div class="row">
-          <div class="d-lg-block">
-            <div class="container">
-              <h1>
-                <%=restaurant.name%>
-              </h1>
-              <br>
-              <br>
-              <h2>
-                Contact Info
-              </h2>
-              <br>
-              <h3>
-                Address
-              </h3>
-              <h4>
-                <%=restaurant.address.houseNum%> <%=restaurant.address.street%>
-                <%=restaurant.address.city%>, <%=restaurant.address.zipcode%>
-              </h4>
-              <h3>
-                Phone Number
-              </h3>
-              <h4>
-                we don't have one, do we
-              </h4>
-              <br>
-              <br>
-              <h2>
-                Menus
-              </h2>
-              <% restaurant.menus.forEach(function(menu) { %>
-                <h3>
-                  <%=menu.name%>
-                </h3>
-                <ul>
-                <% menu.menuItems.forEach(function(menuItem) { %>
-                  <li>
-                    <img class="user" src="<%=menuItem.image%>" height="150" width="200">
-                    <br>
-                    <h4>
-                      <%=menuItem.name%> / <%=menuItem.price%>
-                    </h4>
-                  </li>
-                <% } ); %>
-                </ul>
-              <% } ); %>
+      <h1 align="center" style="padding-top: 75px;">
+        <b>
+          <%=restaurant.name%>
+        </b>
+      </h1>
+      <h3 align="center"; style="padding-top: 5px;">
+        <i>
+          <%=restaurant.address.houseNum%> <%=restaurant.address.street%>, <%=restaurant.address.city%>, CA <%=restaurant.address.zipcode%>
+          <br>
+          +1 951-264-3421
+        </i>
+      </h3>
+      <br>
+      <% restaurant.menus.forEach(function(menu) { %>
+        <h1 align="center" style="padding-top: 5px;">
+          <b>
+            <%=menu.name%>
+          </b>
+        </h1>
+        <div id="container" class="cols" align="center">
+          <% menu.menuItems.forEach(function(menuItem) { %>
+            <div class="box">
+              <a href="#" style="text-decoration: none;">
+                <img
+                  src="<%=menuItem.image%>"
+                  alt="<%=menuItem.name%>"
+                  class="image"
+                />
+                <div class="name">
+                  <p>
+                    <%=menuItem.name%> / $<%=menuItem.price%>.00
+                  </p>
+                </div>
+              </a>
             </div>
-          </div>
+          <% } ); %>
         </div>
-      </div>
+      <% } ); %>
     </div>
   </header>
 </body>
