--- a/project/views/partials/header.ejs
+++ b/project/views/partials/header.ejs
@@ -106,7 +106,7 @@
           >
         </li>
         <li class="nav-item">
-          <a class="btn btn-outline-light mx-2" href="#" role="button">
+          <a class="btn btn-outline-light mx-2" href="/shoppingcart" role="button">
             <span class="fa">&#xf07a;</span></a
           >
         </li>
