--- a/project/views/restaurantprofile.ejs
+++ b/project/views/restaurantprofile.ejs
@@ -25,11 +25,13 @@
 
 <body>
   <%- include("./partials/header.ejs") %>
-  <header id="profile-section">
-    <div class="shamelessly-copied-dark-overlay">
-      <h1 align="center" style="padding-top: 75px;">
+  <header id="home-section">
+    <div class="dark-overlay">
+      <h1 align="center" style="padding-top: 75px; color:#ffd700">
         <b>
-          <%=restaurant.name%>
+          <u>
+            <%=restaurant.name%>
+          </u>
         </b>
       </h1>
       <h3 align="center"; style="padding-top: 5px;">
@@ -39,9 +41,9 @@
           +1 951-264-3421
         </i>
       </h3>
-      <br>
+      <hr>
       <% restaurant.menus.forEach(function(menu) { %>
-        <h1 align="center" style="padding-top: 5px;">
+        <h1 align="center" style="padding-top: 5px; color:#ffd700">
           <b>
             <%=menu.name%>
           </b>
@@ -56,7 +58,7 @@
                   class="image"
                 />
                 <div class="name">
-                  <p>
+                  <p style="color: #ffffff">
                     <%=menuItem.name%> / $<%=menuItem.price%>.00
                   </p>
                 </div>
