raul demands that i push something

--- a/project/views/itemconfirm.ejs
+++ b/project/views/itemconfirm.ejs
@@ -47,7 +47,7 @@
                     height="25"
                   />
                   <strong style="color: #000000">
-                    <%=orderItem.name%> / <%=orderItem.restaurant%>
+                    <%=orderItem.name%>
                   </strong>
                   <span style="color: #000000">
                     $<%=orderItem.price%>
