--- a/project/views/shoppingcart.ejs
+++ b/project/views/shoppingcart.ejs
@@ -55,7 +55,7 @@
                         height="25"
                       />
                       <strong style="color: #000000">
-                        <%=orderItem.name%> / <%=orderItem.restaurant%>
+                        <%=orderItem.name%> / restaurantName
                       </strong>
                       <span style="color: #000000">
                         $<%=orderItem.price%>
