--- a/project/views/itemconfirm.ejs
+++ b/project/views/itemconfirm.ejs
@@ -68,6 +68,9 @@
                 <button type="button" href="#" class="btn btn-success">
                   Checkout
                 </button>
+                <button type="button" href="#" class="btn btn-fail">
+                  Back
+                </button>
               </div>
             </div>
           </div>
