added redirect for itemconfirm to signin page if not logged in

--- a/project/views/restaurantprofile.ejs
+++ b/project/views/restaurantprofile.ejs
@@ -51,7 +51,7 @@
         <div id="container" class="cols" align="center">
           <% menu.menuItems.forEach(function(menuItem) { %>
             <div class="box">
-              <a href="#" style="text-decoration: none;">
+              <a href="/itemconfirm/<%=restaurant._id%>/<%=menuItem._id%>" style="text-decoration: none;">
                 <img
                   src="<%=menuItem.image%>"
                   alt="<%=menuItem.name%>"
