--- a/project/views/itemconfirm.ejs
+++ b/project/views/itemconfirm.ejs
@@ -65,10 +65,10 @@
             </div>
             <div class="row">
               <div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
-                <button type="button" href="#" class="btn btn-success">
+                <button method="POST" type="button" href="/restaurantprofile/<%=restaurant._id%>/<%=itemOrder._id%>" class="btn btn-success">
                   Checkout
                 </button>
-                <button type="button" href="#" class="btn btn-fail">
+                <button type="button" href="/restaurantprofile/<%=restaurant._id%>" class="btn btn-fail">
                   Back
                 </button>
               </div>
