--- a/project/views/partials/footer.ejs
+++ b/project/views/partials/footer.ejs
@@ -20,7 +20,7 @@
         </div>
         <div class="row" style="padding-bottom: 15px">
           <a href="/">
-            <img src="../public/img/rSedLogo.png" style="width: 30px; height: 30px" />
+            <img src="/public/img/rSedLogo.png" style="width: 30px; height: 30px" />
           </a>
           <a href="#" style="color:grey">
             <span class="mr-3" style="padding-left: 15px; font-size: 12px;">Terms of Service</span>
