restored background on shoppingcart

--- a/project/views/shoppingcart.ejs
+++ b/project/views/shoppingcart.ejs
@@ -33,7 +33,7 @@
 
   <body>
     <%- include("./partials/header.ejs") %>
-    <header id="container" style="padding-top: 100px;">
+    <header id="home-section">
       <div class="dark-overlay">
         <% if (currentOrder) { %>
         <div class="home-inner container">
