--- a/project/views/shoppingcart.ejs
+++ b/project/views/shoppingcart.ejs
@@ -95,9 +95,9 @@
                 </p>
 
                 <p style="float: right;">
-                  <button
+                  <a
                     type="button"
-                    href="#"
+                    href="shoppingcart/checkout"
                     class="btn"
                     style="
                       background-color: red;
@@ -106,7 +106,7 @@
                     "
                   >
                     Checkout
-                  </button>
+                </a>
                 </p>
               </h3>
             </div>
