--- a/project/views/partials/header.ejs
+++ b/project/views/partials/header.ejs
@@ -111,7 +111,7 @@
             href="/shoppingcart"
             role="button"
           >
-            <span class="fa">&#xf07a;</span></a
+            <span class="cart-badge">0&#xf07a;</span></a
           >
         </li>
         <li class="nav-item">
